# Carrier-Owl

./: config.yaml  marp.css  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: cron.yml  maintain.yaml
src/: carrier_owl.py  make_slide.py  slide_owl.py
