[tool.poetry]
name = "carrier-owl"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0.38.1"
lxml = "^4.6.3"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.9.3"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
arxiv = "1.4.7"
openai = "^1.16.2"
pillow = "^9.5.0"
pymupdf = "^1.22.3"
slack-sdk = "^3.21.3"
feedparser = "^6.0.11"
pandas = "^2.2.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
